--- a/00_datasets/jupyter_data_overview.ipynb
+++ b/00_datasets/jupyter_data_overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1f539922",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8c1def4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_netflix = pd.read_csv('00_datasets/netflix_titles.csv')"
+    "df_netflix = pd.read_csv('netflix_titles.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c276affe",
    "metadata": {},
    "outputs": [
@@ -225,17 +225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "7551e758",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_amazon = pd.read_csv('00_datasets/amazon_prime_titles.csv')"
+    "df_amazon = pd.read_csv('amazon_prime_titles.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d56049e3",
    "metadata": {},
    "outputs": [
@@ -431,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1f5ddfee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_disney = pd.read_csv('00_datasets/disney_plus_titles.csv')"
+    "df_disney = pd.read_csv('disney_plus_titles.csv')"
    ]
   },
   {
