add data by year

--- a/00_datasets/jupyter_data_overview.ipynb
+++ b/00_datasets/jupyter_data_overview.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "8c1def4e",
    "metadata": {},
    "outputs": [],
@@ -225,6 +225,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "id": "abf25455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_netflix['date_added'] = pd.to_datetime(df_netflix['date_added'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a41551f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_netflix = df_netflix[df_netflix['date_added'] >= '2019-01-01']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "095efd71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_netflix['year'] = df_netflix['date_added'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "0f9ab442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>show_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>title</th>\n",
+       "      <th>director</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>country</th>\n",
+       "      <th>date_added</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>listed_in</th>\n",
+       "      <th>description</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s1</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Dick Johnson Is Dead</td>\n",
+       "      <td>Kirsten Johnson</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2021-09-25</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>90 min</td>\n",
+       "      <td>Documentaries</td>\n",
+       "      <td>As her father nears the end of his life, filmm...</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s2</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Blood &amp; Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>2021-09-24</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>2 Seasons</td>\n",
+       "      <td>International TV Shows, TV Dramas, TV Mysteries</td>\n",
+       "      <td>After crossing paths at a party, a Cape Town t...</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>s3</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Ganglands</td>\n",
+       "      <td>Julien Leclercq</td>\n",
+       "      <td>Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-09-24</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Crime TV Shows, International TV Shows, TV Act...</td>\n",
+       "      <td>To protect his family from a powerful drug lor...</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s4</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Jailbirds New Orleans</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-09-24</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Docuseries, Reality TV</td>\n",
+       "      <td>Feuds, flirtations and toilet talk go down amo...</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s5</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Kota Factory</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...</td>\n",
+       "      <td>India</td>\n",
+       "      <td>2021-09-24</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>2 Seasons</td>\n",
+       "      <td>International TV Shows, Romantic TV Shows, TV ...</td>\n",
+       "      <td>In a city of coaching centers known to train I...</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  show_id     type                  title         director  \\\n",
+       "0      s1    Movie   Dick Johnson Is Dead  Kirsten Johnson   \n",
+       "1      s2  TV Show          Blood & Water              NaN   \n",
+       "2      s3  TV Show              Ganglands  Julien Leclercq   \n",
+       "3      s4  TV Show  Jailbirds New Orleans              NaN   \n",
+       "4      s5  TV Show           Kota Factory              NaN   \n",
+       "\n",
+       "                                                cast        country  \\\n",
+       "0                                                NaN  United States   \n",
+       "1  Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...   South Africa   \n",
+       "2  Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...            NaN   \n",
+       "3                                                NaN            NaN   \n",
+       "4  Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...          India   \n",
+       "\n",
+       "  date_added  release_year rating   duration  \\\n",
+       "0 2021-09-25          2020  PG-13     90 min   \n",
+       "1 2021-09-24          2021  TV-MA  2 Seasons   \n",
+       "2 2021-09-24          2021  TV-MA   1 Season   \n",
+       "3 2021-09-24          2021  TV-MA   1 Season   \n",
+       "4 2021-09-24          2021  TV-MA  2 Seasons   \n",
+       "\n",
+       "                                           listed_in  \\\n",
+       "0                                      Documentaries   \n",
+       "1    International TV Shows, TV Dramas, TV Mysteries   \n",
+       "2  Crime TV Shows, International TV Shows, TV Act...   \n",
+       "3                             Docuseries, Reality TV   \n",
+       "4  International TV Shows, Romantic TV Shows, TV ...   \n",
+       "\n",
+       "                                         description  year  \n",
+       "0  As her father nears the end of his life, filmm...  2021  \n",
+       "1  After crossing paths at a party, a Cape Town t...  2021  \n",
+       "2  To protect his family from a powerful drug lor...  2021  \n",
+       "3  Feuds, flirtations and toilet talk go down amo...  2021  \n",
+       "4  In a city of coaching centers known to train I...  2021  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_netflix.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d0967460",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>1498</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  count\n",
+       "0  2019   2016\n",
+       "1  2020   1879\n",
+       "2  2021   1498"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_netflix.groupby(df_netflix['year']).size().reset_index(name='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "11b56553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year, group in df_netflix.groupby('year'):\n",
+    "    group.to_csv(f'netflix_titles_{year}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "7551e758",
    "metadata": {},
@@ -271,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "3598562b",
    "metadata": {},
    "outputs": [
@@ -308,6 +589,7 @@
        "      <th>duration</th>\n",
        "      <th>listed_in</th>\n",
        "      <th>description</th>\n",
+       "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -319,12 +601,13 @@
        "      <td>Don McKellar</td>\n",
        "      <td>Brendan Gleeson, Taylor Kitsch, Gordon Pinsent</td>\n",
        "      <td>Canada</td>\n",
-       "      <td>March 30, 2021</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>2014</td>\n",
        "      <td>NaN</td>\n",
        "      <td>113 min</td>\n",
        "      <td>Comedy, Drama</td>\n",
        "      <td>A small fishing village must procure a local d...</td>\n",
+       "      <td>2021.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -334,12 +617,13 @@
        "      <td>Girish Joshi</td>\n",
        "      <td>Mahesh Manjrekar, Abhay Mahajan, Sachin Khedekar</td>\n",
        "      <td>India</td>\n",
-       "      <td>March 30, 2021</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>2018</td>\n",
        "      <td>13+</td>\n",
        "      <td>110 min</td>\n",
        "      <td>Drama, International</td>\n",
        "      <td>A Metro Family decides to fight a Cyber Crimin...</td>\n",
+       "      <td>2021.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -349,12 +633,13 @@
        "      <td>Josh Webber</td>\n",
        "      <td>Tom Sizemore, Lorenzo Lamas, Robert LaSardo, R...</td>\n",
        "      <td>United States</td>\n",
-       "      <td>March 30, 2021</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>2017</td>\n",
        "      <td>NaN</td>\n",
        "      <td>74 min</td>\n",
        "      <td>Action, Drama, Suspense</td>\n",
        "      <td>After a man discovers his wife is cheating on ...</td>\n",
+       "      <td>2021.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -364,12 +649,13 @@
        "      <td>Sonia Anderson</td>\n",
        "      <td>Interviews with: Pink, Adele, Beyoncé, Britney...</td>\n",
        "      <td>United States</td>\n",
-       "      <td>March 30, 2021</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>2014</td>\n",
        "      <td>NaN</td>\n",
        "      <td>69 min</td>\n",
        "      <td>Documentary</td>\n",
        "      <td>Pink breaks the mold once again, bringing her ...</td>\n",
+       "      <td>2021.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -379,12 +665,13 @@
        "      <td>Giles Foster</td>\n",
        "      <td>Harry Dean Stanton, Kieran O'Brien, George Cos...</td>\n",
        "      <td>United Kingdom</td>\n",
-       "      <td>March 30, 2021</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>1989</td>\n",
        "      <td>NaN</td>\n",
        "      <td>45 min</td>\n",
        "      <td>Drama, Fantasy</td>\n",
        "      <td>Teenage Matt Banting wants to work with a famo...</td>\n",
+       "      <td>2021.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -405,28 +692,114 @@
        "3  Interviews with: Pink, Adele, Beyoncé, Britney...   United States   \n",
        "4  Harry Dean Stanton, Kieran O'Brien, George Cos...  United Kingdom   \n",
        "\n",
-       "       date_added  release_year rating duration                listed_in  \\\n",
-       "0  March 30, 2021          2014    NaN  113 min            Comedy, Drama   \n",
-       "1  March 30, 2021          2018    13+  110 min     Drama, International   \n",
-       "2  March 30, 2021          2017    NaN   74 min  Action, Drama, Suspense   \n",
-       "3  March 30, 2021          2014    NaN   69 min              Documentary   \n",
-       "4  March 30, 2021          1989    NaN   45 min           Drama, Fantasy   \n",
+       "  date_added  release_year rating duration                listed_in  \\\n",
+       "0 2021-03-30          2014    NaN  113 min            Comedy, Drama   \n",
+       "1 2021-03-30          2018    13+  110 min     Drama, International   \n",
+       "2 2021-03-30          2017    NaN   74 min  Action, Drama, Suspense   \n",
+       "3 2021-03-30          2014    NaN   69 min              Documentary   \n",
+       "4 2021-03-30          1989    NaN   45 min           Drama, Fantasy   \n",
        "\n",
-       "                                         description  \n",
-       "0  A small fishing village must procure a local d...  \n",
-       "1  A Metro Family decides to fight a Cyber Crimin...  \n",
-       "2  After a man discovers his wife is cheating on ...  \n",
-       "3  Pink breaks the mold once again, bringing her ...  \n",
-       "4  Teenage Matt Banting wants to work with a famo...  "
+       "                                         description    year  \n",
+       "0  A small fishing village must procure a local d...  2021.0  \n",
+       "1  A Metro Family decides to fight a Cyber Crimin...  2021.0  \n",
+       "2  After a man discovers his wife is cheating on ...  2021.0  \n",
+       "3  Pink breaks the mold once again, bringing her ...  2021.0  \n",
+       "4  Teenage Matt Banting wants to work with a famo...  2021.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_amazon.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "9faf5b70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_amazon = df_amazon.dropna(subset=['date_added'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "73a43fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_amazon['date_added'] = pd.to_datetime(df_amazon['date_added'], errors='coerce')\n",
+    "df_amazon['year'] = df_amazon['date_added'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "32fadd14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  count\n",
+       "0  2021    155"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_amazon.groupby(df_amazon['year']).size().reset_index(name='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "df998f78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_amazon.to_csv('amazon_prime_titles_2021.csv', index=False)"
    ]
   },
   {
